--- a/index..html
+++ b/index..html
@@ -1,114 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ADD TO CART</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add To Cart</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <div id="wrapper">
-      <div class="left">
-        <h2>Products</h2>
-        <div class="products">
-          <section class="heading">
-            <div>Name</div>
-            <div>
-              Price
-              <i class="fa-solid fa-indian-rupee-sign"></i>
-            </div>
-            <div>Add to cart</div>
-          </section>
-          <section class="product">
-            <div>Product-1</div>
-            <div class="price">100</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-2</div>
-            <div class="price">150</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-3</div>
-            <div class="price">200</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-4</div>
-            <div class="price">500</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-5</div>
-            <div class="price">300</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-6</div>
-            <div class="price">400</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-7</div>
-            <div class="price">200</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-		  <section class="product">
-            <div>Product-8</div>
-            <div class="price">500</div>
-            <div class="add-btn-cart">
-              <span class="minus">-</span>
-              <span class="quantity">5</span>
-              <span class="plus">+</span>
-            </div>
-          </section>
-         
-        </div>
-      </div>
+        <div id="product">
+            <h1>Products</h1>
+            <form action="">
+                <input type="text" name="product" placeholder="Enter Product Name" required>
+                <input type="text" name="quantity" placeholder="Enter Product Price" required>
+                <button type="submit">Add Item</button>
+            </form>
+            <div id="product-List">
 
-      <div class="right">
-        <h2>Cart</h2>
-        <section class="addedtocart">
-			<div class="ADDED">
-				<h2 style="color: red; font-size: 10px;  text-align: center;">No Product added to the cart</h2>
-			</div>
-		</section>
-      </div>
+            </div>
+        </div>
+        <div id="cart">
+            <h1>Cart</h1>
+            <p class="blank-para"></p>
+            <div id="cartData">
+                <p>No Product added to the cart</p>
+            </div>
+        </div>
     </div>
-  </body>
+    <script src="scripts.js"></script>
+</body>
 </html>
