--- a/index..html
+++ b/index..html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
         <div id="product">
-            <h1>Products</h1>
+            <h1>Products.</h1>
             <form action="">
                 <input type="text" name="product" placeholder="Enter Product Name" required>
                 <input type="text" name="quantity" placeholder="Enter Product Price" required>
